# glTrace

./: .gitignore  CMakeLists.txt  README.md  README.md~  generate.sh
include/: generated.h  glTraceCommon.h  lock.h
src/: catch.c  glCopyTexImage.c  glReadPixels.c  timediff.c
template/: generated.h.tmpl  glEntry.c.tmpl  glFuncTemplate.tmpl  glXGetProcAddress.c.tmpl
tools/: registryToC.py
